feat: support scheduled windows to periodically set the min replicas (#135)
